Fix code textarea being too short by default

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -18,7 +18,7 @@ textarea {
 
 textarea {
   padding: var(--m-l);
-  min-height: 180px;
+  min-height: 200px;
 }
 
 .wavlist {
